contrib/libs/pdfium/public/fpdfview.h

typedef struct fpdf_bitmap_t__* FPDF_BITMAP;
typedef struct fpdf_document_t__* FPDF_DOCUMENT;
typedef struct fpdf_font_t__* FPDF_FONT;
typedef struct fpdf_page_t__* FPDF_PAGE;
typedef struct fpdf_pageobject_t__* FPDF_PAGEOBJECT;  
typedef struct fpdf_pageobjectmark_t__* FPDF_PAGEOBJECTMARK;
typedef const struct fpdf_pathsegment_t* FPDF_PATHSEGMENT;
typedef int FPDF_BOOL;
typedef float FS_FLOAT;
typedef unsigned short FPDF_WCHAR;
typedef const char* FPDF_BYTESTRING;
typedef const FPDF_WCHAR* FPDF_WIDESTRING;
typedef struct _FS_QUADPOINTSF {
  FS_FLOAT x1;
  FS_FLOAT y1;
  FS_FLOAT x2;
  FS_FLOAT y2;
  FS_FLOAT x3;
  FS_FLOAT y3;
  FS_FLOAT x4;
  FS_FLOAT y4;
} FS_QUADPOINTSF;
typedef struct {
  unsigned long m_FileLen;
  int (*m_GetBlock)(void* param,
                    unsigned long position,
                    unsigned char* pBuf,
                    unsigned long size);
  void* m_Param;
} FPDF_FILEACCESS;