contrib/python/pypdfium2/pypdfium2_raw/bindings.py


# ./fpdf_edit.h: 605
FPDFPageObjMark_GetParamBlobValue = _libs['pdfium']['FPDFPageObjMark_GetParamBlobValue']
FPDFPageObjMark_GetParamBlobValue.argtypes = (FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING, POINTER(c_ubyte), c_ulong, POINTER(c_ulong))
FPDFPageObjMark_GetParamBlobValue.restype = FPDF_BOOL

# ./fpdf_edit.h: 624
FPDFPageObjMark_SetIntParam = _libs['pdfium']['FPDFPageObjMark_SetIntParam']
FPDFPageObjMark_SetIntParam.argtypes = (FPDF_DOCUMENT, FPDF_PAGEOBJECT, FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING, c_int)
FPDFPageObjMark_SetIntParam.restype = FPDF_BOOL

# ./fpdf_edit.h: 662
FPDFPageObjMark_SetStringParam = _libs['pdfium']['FPDFPageObjMark_SetStringParam']
FPDFPageObjMark_SetStringParam.argtypes = (FPDF_DOCUMENT, FPDF_PAGEOBJECT, FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING, FPDF_BYTESTRING)
FPDFPageObjMark_SetStringParam.restype = FPDF_BOOL

# ./fpdf_edit.h: 682
FPDFPageObjMark_SetBlobParam = _libs['pdfium']['FPDFPageObjMark_SetBlobParam']
FPDFPageObjMark_SetBlobParam.argtypes = (FPDF_DOCUMENT, FPDF_PAGEOBJECT, FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING, POINTER(c_ubyte), c_ulong)
FPDFPageObjMark_SetBlobParam.restype = FPDF_BOOL

# ./fpdf_edit.h: 698
FPDFPageObjMark_RemoveParam = _libs['pdfium']['FPDFPageObjMark_RemoveParam']
FPDFPageObjMark_RemoveParam.argtypes = (FPDF_PAGEOBJECT, FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING)
FPDFPageObjMark_RemoveParam.restype = FPDF_BOOL

# ./fpdf_edit.h: 717
FPDFImageObj_LoadJpegFile = _libs['pdfium']['FPDFImageObj_LoadJpegFile']
FPDFImageObj_LoadJpegFile.argtypes = (POINTER(FPDF_PAGE), c_int, FPDF_PAGEOBJECT, POINTER(FPDF_FILEACCESS))
FPDFImageObj_LoadJpegFile.restype = FPDF_BOOL

# ./fpdf_edit.h: 739
FPDFImageObj_LoadJpegFileInline = _libs['pdfium']['FPDFImageObj_LoadJpegFileInline']
FPDFImageObj_LoadJpegFileInline.argtypes = (POINTER(FPDF_PAGE), c_int, FPDF_PAGEOBJECT, POINTER(FPDF_FILEACCESS))
FPDFImageObj_LoadJpegFileInline.restype = FPDF_BOOL

# ./fpdf_edit.h: 763
FPDFImageObj_SetMatrix = _libs['pdfium']['FPDFImageObj_SetMatrix']
FPDFImageObj_SetMatrix.argtypes = (FPDF_PAGEOBJECT, c_double, c_double, c_double, c_double, c_double, c_double)
FPDFImageObj_SetMatrix.restype = FPDF_BOOL

# ./fpdf_edit.h: 780
FPDFImageObj_SetBitmap = _libs['pdfium']['FPDFImageObj_SetBitmap']
FPDFImageObj_SetBitmap.argtypes = (POINTER(FPDF_PAGE), c_int, FPDF_PAGEOBJECT, FPDF_BITMAP)
FPDFImageObj_SetBitmap.restype = FPDF_BOOL

# ./fpdf_edit.h: 795
FPDFImageObj_GetBitmap = _libs['pdfium']['FPDFImageObj_GetBitmap']
FPDFImageObj_GetBitmap.argtypes = (FPDF_PAGEOBJECT, )
FPDFImageObj_GetBitmap.restype = FPDF_BITMAP

# ./fpdf_edit.h: 811
FPDFImageObj_GetRenderedBitmap = _libs['pdfium']['FPDFImageObj_GetRenderedBitmap']
FPDFImageObj_GetRenderedBitmap.argtypes = (FPDF_DOCUMENT, FPDF_PAGE, FPDF_PAGEOBJECT)
FPDFImageObj_GetRenderedBitmap.restype = FPDF_BITMAP

# ./fpdf_edit.h: 826
FPDFImageObj_GetImageDataDecoded = _libs['pdfium']['FPDFImageObj_GetImageDataDecoded']
FPDFImageObj_GetImageDataDecoded.argtypes = (FPDF_PAGEOBJECT, POINTER(None), c_ulong)
FPDFImageObj_GetImageDataDecoded.restype = c_ulong

# ./fpdf_edit.h: 840
FPDFImageObj_GetImageDataRaw = _libs['pdfium']['FPDFImageObj_GetImageDataRaw']
FPDFImageObj_GetImageDataRaw.argtypes = (FPDF_PAGEOBJECT, POINTER(None), c_ulong)
FPDFImageObj_GetImageDataRaw.restype = c_ulong

# ./fpdf_edit.h: 850
FPDFImageObj_GetImageFilterCount = _libs['pdfium']['FPDFImageObj_GetImageFilterCount']
FPDFImageObj_GetImageFilterCount.argtypes = (FPDF_PAGEOBJECT, )
FPDFImageObj_GetImageFilterCount.restype = c_int

# ./fpdf_edit.h: 864
FPDFImageObj_GetImageFilter = _libs['pdfium']['FPDFImageObj_GetImageFilter']
FPDFImageObj_GetImageFilter.argtypes = (FPDF_PAGEOBJECT, c_int, POINTER(None), c_ulong)
FPDFImageObj_GetImageFilter.restype = c_ulong

# ./fpdf_edit.h: 881
FPDFImageObj_GetImageMetadata = _libs['pdfium']['FPDFImageObj_GetImageMetadata']
FPDFImageObj_GetImageMetadata.argtypes = (FPDF_PAGEOBJECT, FPDF_PAGE, POINTER(FPDF_IMAGEOBJ_METADATA))
FPDFImageObj_GetImageMetadata.restype = FPDF_BOOL

# ./fpdf_edit.h: 894
FPDFImageObj_GetImagePixelSize = _libs['pdfium']['FPDFImageObj_GetImagePixelSize']
FPDFImageObj_GetImagePixelSize.argtypes = (FPDF_PAGEOBJECT, POINTER(c_uint), POINTER(c_uint))
FPDFImageObj_GetImagePixelSize.restype = FPDF_BOOL

# ./fpdf_edit.h: 929
FPDFPageObj_CreateNewPath = _libs['pdfium']['FPDFPageObj_CreateNewPath']
FPDFPageObj_CreateNewPath.argtypes = (c_float, c_float)
FPDFPageObj_CreateNewPath.restype = FPDF_PAGEOBJECT

# ./fpdf_edit.h: 940
FPDFPageObj_CreateNewRect = _libs['pdfium']['FPDFPageObj_CreateNewRect']
FPDFPageObj_CreateNewRect.argtypes = (c_float, c_float, c_float, c_float)
FPDFPageObj_CreateNewRect.restype = FPDF_PAGEOBJECT

# ./fpdf_edit.h: 955
FPDFPageObj_GetBounds = _libs['pdfium']['FPDFPageObj_GetBounds']
FPDFPageObj_GetBounds.argtypes = (FPDF_PAGEOBJECT, POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float))
FPDFPageObj_GetBounds.restype = FPDF_BOOL

# ./fpdf_edit.h: 977
FPDFPageObj_GetRotatedBounds = _libs['pdfium']['FPDFPageObj_GetRotatedBounds']
FPDFPageObj_GetRotatedBounds.argtypes = (FPDF_PAGEOBJECT, POINTER(FS_QUADPOINTSF))
FPDFPageObj_GetRotatedBounds.restype = FPDF_BOOL

# ./fpdf_edit.h: 989
FPDFPageObj_SetBlendMode = _libs['pdfium']['FPDFPageObj_SetBlendMode']
FPDFPageObj_SetBlendMode.argtypes = (FPDF_PAGEOBJECT, FPDF_BYTESTRING)
FPDFPageObj_SetBlendMode.restype = None

# ./fpdf_edit.h: 1002
FPDFPageObj_SetStrokeColor = _libs['pdfium']['FPDFPageObj_SetStrokeColor']
FPDFPageObj_SetStrokeColor.argtypes = (FPDF_PAGEOBJECT, c_uint, c_uint, c_uint, c_uint)
FPDFPageObj_SetStrokeColor.restype = FPDF_BOOL

# ./fpdf_edit.h: 1018
FPDFPageObj_GetStrokeColor = _libs['pdfium']['FPDFPageObj_GetStrokeColor']
FPDFPageObj_GetStrokeColor.argtypes = (FPDF_PAGEOBJECT, POINTER(c_uint), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint))
FPDFPageObj_GetStrokeColor.restype = FPDF_BOOL

# ./fpdf_edit.h: 1031
FPDFPageObj_SetStrokeWidth = _libs['pdfium']['FPDFPageObj_SetStrokeWidth']
FPDFPageObj_SetStrokeWidth.argtypes = (FPDF_PAGEOBJECT, c_float)
FPDFPageObj_SetStrokeWidth.restype = FPDF_BOOL

# ./fpdf_edit.h: 1040
FPDFPageObj_GetStrokeWidth = _libs['pdfium']['FPDFPageObj_GetStrokeWidth']
FPDFPageObj_GetStrokeWidth.argtypes = (FPDF_PAGEOBJECT, POINTER(c_float))
FPDFPageObj_GetStrokeWidth.restype = FPDF_BOOL

# ./fpdf_edit.h: 1050
FPDFPageObj_GetLineJoin = _libs['pdfium']['FPDFPageObj_GetLineJoin']
FPDFPageObj_GetLineJoin.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_GetLineJoin.restype = c_int

# ./fpdf_edit.h: 1060
FPDFPageObj_SetLineJoin = _libs['pdfium']['FPDFPageObj_SetLineJoin']
FPDFPageObj_SetLineJoin.argtypes = (FPDF_PAGEOBJECT, c_int)
FPDFPageObj_SetLineJoin.restype = FPDF_BOOL

# ./fpdf_edit.h: 1070
FPDFPageObj_GetLineCap = _libs['pdfium']['FPDFPageObj_GetLineCap']
FPDFPageObj_GetLineCap.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_GetLineCap.restype = c_int

# ./fpdf_edit.h: 1080
FPDFPageObj_SetLineCap = _libs['pdfium']['FPDFPageObj_SetLineCap']
FPDFPageObj_SetLineCap.argtypes = (FPDF_PAGEOBJECT, c_int)
FPDFPageObj_SetLineCap.restype = FPDF_BOOL

# ./fpdf_edit.h: 1092
FPDFPageObj_SetFillColor = _libs['pdfium']['FPDFPageObj_SetFillColor']
FPDFPageObj_SetFillColor.argtypes = (FPDF_PAGEOBJECT, c_uint, c_uint, c_uint, c_uint)
FPDFPageObj_SetFillColor.restype = FPDF_BOOL

# ./fpdf_edit.h: 1108
FPDFPageObj_GetFillColor = _libs['pdfium']['FPDFPageObj_GetFillColor']
FPDFPageObj_GetFillColor.argtypes = (FPDF_PAGEOBJECT, POINTER(c_uint), POINTER(c_uint), POINTER(c_uint), POINTER(c_uint))
FPDFPageObj_GetFillColor.restype = FPDF_BOOL

# ./fpdf_edit.h: 1122
FPDFPageObj_GetDashPhase = _libs['pdfium']['FPDFPageObj_GetDashPhase']
FPDFPageObj_GetDashPhase.argtypes = (FPDF_PAGEOBJECT, POINTER(c_float))
FPDFPageObj_GetDashPhase.restype = FPDF_BOOL

# ./fpdf_edit.h: 1132
FPDFPageObj_SetDashPhase = _libs['pdfium']['FPDFPageObj_SetDashPhase']
FPDFPageObj_SetDashPhase.argtypes = (FPDF_PAGEOBJECT, c_float)
FPDFPageObj_SetDashPhase.restype = FPDF_BOOL

# ./fpdf_edit.h: 1141
FPDFPageObj_GetDashCount = _libs['pdfium']['FPDFPageObj_GetDashCount']
FPDFPageObj_GetDashCount.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_GetDashCount.restype = c_int

# ./fpdf_edit.h: 1152
FPDFPageObj_GetDashArray = _libs['pdfium']['FPDFPageObj_GetDashArray']
FPDFPageObj_GetDashArray.argtypes = (FPDF_PAGEOBJECT, POINTER(c_float), c_size_t)
FPDFPageObj_GetDashArray.restype = FPDF_BOOL

# ./fpdf_edit.h: 1166
FPDFPageObj_SetDashArray = _libs['pdfium']['FPDFPageObj_SetDashArray']
FPDFPageObj_SetDashArray.argtypes = (FPDF_PAGEOBJECT, POINTER(c_float), c_size_t, c_float)
FPDFPageObj_SetDashArray.restype = FPDF_BOOL

# ./fpdf_edit.h: 1179
FPDFPath_CountSegments = _libs['pdfium']['FPDFPath_CountSegments']
FPDFPath_CountSegments.argtypes = (FPDF_PAGEOBJECT, )
FPDFPath_CountSegments.restype = c_int

# ./fpdf_edit.h: 1188
FPDFPath_GetPathSegment = _libs['pdfium']['FPDFPath_GetPathSegment']
FPDFPath_GetPathSegment.argtypes = (FPDF_PAGEOBJECT, c_int)
FPDFPath_GetPathSegment.restype = FPDF_PATHSEGMENT

# ./fpdf_edit.h: 1198
FPDFPathSegment_GetPoint = _libs['pdfium']['FPDFPathSegment_GetPoint']
FPDFPathSegment_GetPoint.argtypes = (FPDF_PATHSEGMENT, POINTER(c_float), POINTER(c_float))
FPDFPathSegment_GetPoint.restype = FPDF_BOOL

# ./fpdf_edit.h: 1206
FPDFPathSegment_GetType = _libs['pdfium']['FPDFPathSegment_GetType']
FPDFPathSegment_GetType.argtypes = (FPDF_PATHSEGMENT, )
FPDFPathSegment_GetType.restype = c_int

# ./fpdf_edit.h: 1214
FPDFPathSegment_GetClose = _libs['pdfium']['FPDFPathSegment_GetClose']
FPDFPathSegment_GetClose.argtypes = (FPDF_PATHSEGMENT, )
FPDFPathSegment_GetClose.restype = FPDF_BOOL

# ./fpdf_edit.h: 1226
FPDFPath_MoveTo = _libs['pdfium']['FPDFPath_MoveTo']
FPDFPath_MoveTo.argtypes = (FPDF_PAGEOBJECT, c_float, c_float)
FPDFPath_MoveTo.restype = FPDF_BOOL

# ./fpdf_edit.h: 1239
FPDFPath_LineTo = _libs['pdfium']['FPDFPath_LineTo']
FPDFPath_LineTo.argtypes = (FPDF_PAGEOBJECT, c_float, c_float)
FPDFPath_LineTo.restype = FPDF_BOOL

# ./fpdf_edit.h: 1254
FPDFPath_BezierTo = _libs['pdfium']['FPDFPath_BezierTo']
FPDFPath_BezierTo.argtypes = (FPDF_PAGEOBJECT, c_float, c_float, c_float, c_float, c_float, c_float)
FPDFPath_BezierTo.restype = FPDF_BOOL

# ./fpdf_edit.h: 1270
FPDFPath_Close = _libs['pdfium']['FPDFPath_Close']
FPDFPath_Close.argtypes = (FPDF_PAGEOBJECT, )
FPDFPath_Close.restype = FPDF_BOOL

# ./fpdf_edit.h: 1279
FPDFPath_SetDrawMode = _libs['pdfium']['FPDFPath_SetDrawMode']
FPDFPath_SetDrawMode.argtypes = (FPDF_PAGEOBJECT, c_int, FPDF_BOOL)
FPDFPath_SetDrawMode.restype = FPDF_BOOL

# ./fpdf_edit.h: 1290
FPDFPath_GetDrawMode = _libs['pdfium']['FPDFPath_GetDrawMode']
FPDFPath_GetDrawMode.argtypes = (FPDF_PAGEOBJECT, POINTER(c_int), POINTER(FPDF_BOOL))
FPDFPath_GetDrawMode.restype = FPDF_BOOL

# ./fpdf_edit.h: 1302
FPDFPageObj_NewTextObj = _libs['pdfium']['FPDFPageObj_NewTextObj']
FPDFPageObj_NewTextObj.argtypes = (FPDF_DOCUMENT, FPDF_BYTESTRING, c_float)
FPDFPageObj_NewTextObj.restype = FPDF_PAGEOBJECT

# ./fpdf_edit.h: 1313
FPDFText_SetText = _libs['pdfium']['FPDFText_SetText']
FPDFText_SetText.argtypes = (FPDF_PAGEOBJECT, FPDF_WIDESTRING)
FPDFText_SetText.restype = FPDF_BOOL

# ./fpdf_edit.h: 1325
FPDFText_SetCharcodes = _libs['pdfium']['FPDFText_SetCharcodes']
FPDFText_SetCharcodes.argtypes = (FPDF_PAGEOBJECT, POINTER(uint32_t), c_size_t)
FPDFText_SetCharcodes.restype = FPDF_BOOL

# ./fpdf_edit.h: 1342
FPDFText_LoadFont = _libs['pdfium']['FPDFText_LoadFont']
FPDFText_LoadFont.argtypes = (FPDF_DOCUMENT, POINTER(uint8_t), uint32_t, c_int, FPDF_BOOL)
FPDFText_LoadFont.restype = FPDF_FONT

# ./fpdf_edit.h: 1360
FPDFText_LoadStandardFont = _libs['pdfium']['FPDFText_LoadStandardFont']
FPDFText_LoadStandardFont.argtypes = (FPDF_DOCUMENT, FPDF_BYTESTRING)
FPDFText_LoadStandardFont.restype = FPDF_FONT

# ./fpdf_edit.h: 1379
FPDFText_LoadCidType2Font = _libs['pdfium']['FPDFText_LoadCidType2Font']
FPDFText_LoadCidType2Font.argtypes = (FPDF_DOCUMENT, POINTER(uint8_t), uint32_t, FPDF_BYTESTRING, POINTER(uint8_t), uint32_t)
FPDFText_LoadCidType2Font.restype = FPDF_FONT
